fix (user-side): Force scrollbar to disappear

--- a/src/index.css
+++ b/src/index.css
@@ -36,5 +36,5 @@ body {
 
 
 ::-webkit-scrollbar {
-  display: none;
+  display: none !important;
 }
